--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "koa": "^2.2.0"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-register": "^6.24.1"
   }
 }
